--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,43 @@ body {
   margin: 0;
   /* overflow: hidden; */
 }
+
+#intro {
+  background-color: var(--light-brown);
+}
+
+.top-bar {
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.cart-logo {
+  color: white;
+  background-color: var(--light-yellow);
+  border-radius: 25% / 50%;
+  padding: 2px 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 30px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 300px;
+  text-decoration-line: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+li a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.4rem;
+}
