--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,15 @@ body {
   color: white;
   background-color: var(--light-yellow);
   border-radius: 25% / 50%;
-  padding: 2px 20px;
+  padding: 2px 22px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 30px;
+  font-size: 32px;
+}
+
+.cart-logo span {
+  padding-left: 6px;
 }
 
 nav ul {
