--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,31 @@ li a {
   color: black;
   font-size: 1.4rem;
 }
+
+.hero {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 2rem;
+  color: var(--yellow);
+  text-transform: uppercase;
+}
+
+.hero img {
+  width: 55%;
+  padding-right: 20px;
+}
+
+.hero h1 {
+  width: 30%;
+  padding-left: 70px;
+}
+
+#intro button {
+  background-color: var(--light-yellow);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
