--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,10 @@ h6 {
 
 .cart-logo {
   color: white;
+  box-sizing: content-box;
   background-color: var(--orange);
   border-radius: 25% / 50%;
-  padding: 2px 22px;
+  padding: 4px 22px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -68,7 +69,7 @@ h6 {
 }
 
 .cart-logo span {
-  padding-left: 6px;
+  padding-left: 12px;
 }
 
 nav ul {
