Update width of navigation menu in styles.css

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ nav ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 300px;
+  width: 25vw;
   text-decoration-line: none;
 }
 
