--- a/styles.css
+++ b/styles.css
@@ -102,12 +102,12 @@ li a {
 
 .hero img {
   width: 55%;
-  padding-right: 20px;
+  padding-right: 7%;
 }
 
 .hero h1 {
-  width: 30%;
-  padding-left: 70px;
+  width: 36%;
+  padding-left: 7%;
 }
 
 #intro button {
