--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,11 @@ li a {
 #intro button {
   background-color: var(--orange);
   color: white;
-  padding: 10px 20px;
+  padding: 18px 20px;
+  margin-left: 42%;
+  margin-bottom: 44px;
+  margin-top: -25px;
+  border: 1px solid var(--orange);
   border-radius: 5px;
   width: 19%;
   font-size: var(--font-size-large);
