--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,11 @@ li a {
   font-weight: var(--font-weight-bold);
   text-transform: uppercase;
 }
+
+#about {
+  background-color: black;
+  color: white;
+  padding: 50px 10%;
+  font-size: 2.4rem;
+  text-align: center;
+}
